--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @tailwind base;
 @tailwind components;
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
 @tailwind utilities;
 
 
